--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -13,6 +13,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">首頁</a></li>
         <li><a href="choose_chance.html">求籤網</a></li>
+        <li><a href="choose_medicine.html">求藥網</a></li>
         <li><a href="get_chance.html">取籤網</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" onclick="clickMenu(this)">百首籤詩 <span class="caret"></span></a>
@@ -57,6 +58,7 @@
             <li><a href="woman_medicine.html">女科</a></li>
             <li><a href="real_word_100.html">一字真百首</a></li>
           </ul>
+          
         </li><!--/.dropdown -->
       </ul>
     </div><!--/.nav-collapse -->
