--- a/chance/bookBeiDou.html
+++ b/chance/bookBeiDou.html
@@ -39,26 +39,37 @@
 	  	<div class="page-header">
 	        <h1>北斗延壽妙經</h1>
 	        <div class="lead">
-                <h1>太上玄靈北斗本命延生真經</h1>
+                
+                <h1>開經讚</h1>
+                <p>北斗九皇位冠五方。人神主宰煥星光。</p>
+                <p>調理紀和綱。聖德難量。賜福頌無疆。</p>
+                <p>皈命  北斗賜福大星君。</p>
                 <br>
-                <p>爾時。太上老君。於永壽元年正月七日。在太清境上。太極宮中。</p>
-                <p>觀見眾生。億劫漂沉。周廻生死。或居人道。生在中華。或生夷狄之中。</p>
-                <p>或生蠻戎之內。或富或貴。或賤或貧。暫假因緣。墮於地獄。為無定故。</p>
-                <p>罪業牽纏。魂繫陰司。受苦滿足。人道將違。生居畜獸之中。或生禽蟲之屬。</p>
-                <p>轉乖人道。難復人身。如此沉淪。不自知覺。為先世迷真之故。受此輪廻。</p>
-                <p>乃以哀憫之心。分身教化。化身下降。至於蜀都。地神湧出。扶一玉局。</p>
-                <p>而作高座。於是老君昇玉局座。授與天師真人。北斗本命經訣。廣宣要法。普濟眾生。</p>
+                <h1>開經偈</h1>
+                <p>仰啟中天聖。尊居北斗垣。宣威司造化。垂象制乾坤。</p>
+                <p>廣設皈依路。大開解謝門。延齡與度厄。持誦各沾恩。</p>
+                <br>
+                <h1>太上玄靈北斗本命延生妙經</h1>
+                <p>爾時。太上老君。於永壽元年正月七日。在太清境上。</p>
+                <p>太極宮中。觀見眾生。億劫漂沉。周廻生死。或居人道。生在中華。</p>
+                <p>或生夷狄之中。或生蠻戎之內。或富或貴。或賤或貧。</p>
+                <p>暫假因緣。墮於地獄。為無定故。罪業牽纏。魂繫陰司。受苦滿足。</p>
+                <p>人道將違。生居畜獸之中。或生禽蟲之屬。轉乖人道。難復人身。</p>
+                <p>如此沉淪。不自知覺。為先世迷真之故。受此輪廻。</p>
+                <p>乃以哀憫之心。分身教化。化身下降。</p>
+                <p>至於蜀都。地神湧出。扶一玉局。而作高座。</p>
+                <p>於是老君昇玉局座。授與天師真人。北斗本命經訣。廣宣要法。普濟眾生。</p>
                 <p>是時。老君告天師曰。人身難得。中土難生。假使得生。正法難遇。</p>
                 <p>多迷真道。多入邪宗。多種罪根。多肆巧詐。多恣淫殺。多好羣情。</p>
                 <p>多縱貪瞋。多沉地獄。多失人身。如此等緣。眾生不悟。不知正道。</p>
-                <p>迷惑者多。我今哀見此等眾生故。垂法教。為說良緣。令使知道。</p>
+                <p>迷惑者多。我今哀見此等眾生。故垂法教。為說良緣。令使知道。</p>
                 <p>知身性命。皆憑道生。了悟此因。長生人道。種子不絕。世世為人。</p>
                 <p>不生無道之鄉。不斷人之根本。更能心修正道。漸入仙宗。永離輪廻。</p>
                 <p>超昇成道。我故示汝妙法。令度天民。歸真知命。可以本命之日。修齋設醮。</p>
-                <p>啟祝北斗三官五帝。九府四司薦福消災。奏章懇願。虔誠獻禮。種種香花。時新五果。</p>
-                <p>隨世威儀。清淨壇宇。法天像地或於觀宇。或在家庭隨力建功。請行法事。功德深重。</p>
-                <p>不可具陳。唸此大聖北斗七元真君名號。當得罪業消除。災衰洗蕩。福壽資命。</p>
-                <p>善果臻身。凡有急難。可以焚香誦之。尅期安泰。於是說。</p>
+                <p>啟祝北斗三官五帝。九府四司薦福消災。奏章懇願。虔誠獻禮。種種香花。</p>
+                <p>時新五果。隨世威儀。清淨壇宇。法天像地或於觀宇。或在家庭隨力建功。</p>
+                <p>請行法事。功德深重。不可具陳。唸此大聖北斗七元真君名號。當得罪業消除。</p>
+                <p>災衰洗蕩。福壽資命。善果臻身。凡有急難。可以焚香誦之。尅期安泰。於是說。</p>
                 <p>大聖北斗解厄應驗曰。</p>
                 <p>大聖北斗七元君。能解三災厄。</p>
                 <p>大聖北斗七元君。能解四煞厄。</p>
@@ -111,8 +122,8 @@
                 <p>北斗第三天璣宮。真人祿存真星君。寅戍生人屬之。</p>
                 <p>北斗第四天權宮。玄冥文曲紐星君。卯酉生人屬之。</p>
                 <p>北斗第五天衡宮。丹元廉貞綱星君。辰申生人屬之。</p>
-                <p>北斗第六問陽宮。北極武曲紀星君。巳未生人屬之。</p>
-                <p>北斗第七瑤光宮。天衝破軍 關星 君。午生人屬之。</p>
+                <p>北斗第六闓陽宮。北極武曲紀星君。巳未生人屬之。</p>
+                <p>北斗第七瑤光宮。天衝破軍關星君。午生人屬之。</p>
                 <p>北斗洞明宮外輔星君。</p>
                 <p>北斗隱光宮內弼星君。</p>
                 <p>上台虛精開德星君。</p>
@@ -131,7 +142,71 @@
                 <p>大周天界。細入微塵。何災不滅。何福不臻。元皇正炁。來合我身。</p>
                 <p>天罡所指。晝夜常輪。俗居小人。好道求靈。願見尊儀。永保長生。</p>
                 <p>三台虛精。六淳曲生。生我養我。護我身形。</p>
+                <p>魁𩲃𩵄䰢魓𩳐魒尊帝急急如律令</p>
+                <p>老君曰。凡人性命五體。悉屬本命星官之所主掌。</p>
+                <p>本命神將。本宿星官。常垂蔭佑。主持人命。使保天年。凡俗無知。終身不悟。</p>
+                <p>夫本命真官。每歲六度。降在人間。降日為本命限期。</p>
+                <p>有南陵使者三千人。北斗真君七千神將。本命真官。降駕眾真。悉來擁護。</p>
+                <p>可以消災懺罪。請福延生。隨力章醮。福德增崇。其有本命限期將至。</p>
+                <p>自身不知不設齋醮。不修香火。為此輕生迷本。不貴人身。天司奪祿。減算除年。</p>
+                <p>致多夭喪。迷誤之者。雖遇經訣。懷不信心。毀謗真文。如此之人。身謝之後。</p>
+                <p>淪沒三途。漂沉六趣。永失人身。深可悲哀。自致斯苦。若本命之日。能修齋醮。</p>
+                <p>善達天司。一世於本命限期。開轉此經。廣陳供養。使三生常為男子身。富貴聰明。</p>
+                <p>人中殊勝。其有生身果薄。雖生人中。貧窮下賤。縱知本命。無力修崇。能酌水獻花。</p>
+                <p>冥心望北斗。稽首禮拜。唸本命星君名號者。亦不虛過本命限期。皆得延生注福。</p>
+                <p>繫係人身。災厄蠲除。獲福無量。</p>
+                <p>天師歡喜踴躍。作禮讚嘆。難可得遇無上法橋。</p>
+                <p>老君重告天師曰。世人罪福善惡。皆屬天司。懺罪消災。莫越修奉。遇本命生辰。</p>
+                <p>告身中元辰驛馬。削落三災九厄。保見令眷屬安寧。</p>
+                <p>凡有上士。於本命生辰。持此真文者。</p>
+                <p>外伏魔精。內安真性。功霑水陸。善及存亡。悔過虔恭。漸登妙果。重立玄功。</p>
+                <p>證虛無道。乃得聖智圓通。隱顯莫測。出有入無。逍遙雲際。昇入金門。與聖合真。</p>
+                <p>身超三界。永不輪轉。壽量無窮。快樂自在。凡有男女。於本命生辰。及諸齋日。</p>
+                <p>清淨身心。焚香持此真文。自認北斗本命所屬星君。隨心禱祝。善無不應。災罪消除。</p>
+                <p>致感萬聖千真。俱來衛護。此文所在之處。千真敬禮。萬聖護持。魔鬼潜消。精靈伏匿。</p>
+                <p>世有災殃。悉皆消滅。是名北斗本命延生經訣。乃修真之徑路。</p>
+                <p>得道逍遙。皆因此經。證聖成真。皆因此經。出離生死。皆因此經。</p>
+                <p>保護男女。皆因此經。保命延年。皆得自在。永為身寶。福壽可稱。</p>
+                <p>保而敬之。非人勿示。</p>
+                <p>老君說經將畢。龍鶴天仙來迎。還於玉京。是時天師受得妙法。而作是言。</p>
+                <p>誓願流行。以傳善士。若有男女。受持讀誦。我當與十戒仙官。所在擁護。</p>
+                <p>於是再拜老君。而說讚曰。</p>
+                <p>家有北斗經。本命降真靈。</p>
+                <p>家有北斗經。宅舍得安寧。</p>
+                <p>家有北斗經。父母保長生。</p>
+                <p>家有北斗經。諸厭化為塵。</p>
+                <p>家有北斗經。萬邪自歸正。</p>
+                <p>家有北斗經。營業得稱情。</p>
+                <p>家有北斗經。闔門自康寧。</p>
+                <p>家有北斗經。子孫保榮盛。</p>
+                <p>家有北斗經。五路自通達。</p>
+                <p>家有北斗經。眾惡永消滅。</p>
+                <p>家有北斗經。六畜保興生。</p>
+                <p>家有北斗經。疾病得安痊。</p>
+                <p>家有北斗經。財物不虛耗。</p>
+                <p>家有北斗經。橫事永不起。</p>
+                <p>家有北斗經。長保亨利貞。</p>
+                <p>老君曰。善哉善哉。汝可宣揚正教。普濟世人。福利無邊。永沾勝善。</p>
+                <p>是時天師。再拜老君。流傳此經於世。廣垂濟度。勿示非人。戒慎之焉。</p>
+                <br>
+                <h1>回向文</h1>
+                <p>北斗七星。玉真仙靈。貪狼巨門。保臣長生。祿存文曲。使臣聰明。</p>
+                <p>廉貞武曲。衛臣安寧。破軍輔弼。護臣身形。常居吉慶。永處福齡。</p>
+                <p>注上生籍。勾落死名。神清炁爽。洞達幽冥。禦邪攝鬼。群妖摧傾。</p>
+                <p>學道修真。伏願遂成。七元覆護。飛昇紫庭。臣某下情。無任感恩。</p>
+                <p>荷聖激切。懇禱之至。</p>
+                <br>
+                <h1>北斗寶誥  志心皈命禮</h1>
+                <p>開明三景。廻度五常。為造化之樞機。作人神之主宰。</p>
+                <p>宣威三界。統御萬靈。判人間善惡之期。司陰府是非之目。</p>
+                <p>能解一切罪。攝伏諸魔精。大悲大願。大聖大慈。</p>
+                <p>中天大聖。北斗九皇賜福星君。</p>
+                <br>
+                <h1>完經讚</h1>
+                <p>中天大聖。北斗玄冥。七元解厄善通靈。集福並延齡。願見真形。頂禮獲康寧。</p>
+                <p>皈命  北斗賜福大星君</p>
                 <br><br>
+                <p>北斗延壽妙經終。</p>
             </div>
 	    </div>
 	</div>
