--- a/chance/bookChengHuang.html
+++ b/chance/bookChengHuang.html
@@ -54,7 +54,7 @@
                 <br>
                 <p>城隍使司。受封顯佑伯。加封綏靖侯。晉封則曰威靈公。</p>
                 <p>司陰陽。察善惡。定功過。該境有福神檢查。</p>
-                <p>各家有灶神紀錄。凡人為善為惡。難逃神鑒。</p>
+                <p>各家有竈神紀錄。凡人為善為惡。難逃神鑒。</p>
                 <p>蓋在人身中。各有三尸之氣。現於頭上。</p>
                 <p>善氣清而白。惡氣濁而黑。黑白攸分。而善惡明矣。</p>
                 <p>人有肉眼。視而不見。神有慧眼。望而先知。</p>
