--- a/chance/bookInducing.html
+++ b/chance/bookInducing.html
@@ -165,7 +165,7 @@
                 <p>唾流星  指虹霓 </p> 
                 <p>輒指三光  久視日月 </p> 
                 <p>春月燎獵  對北惡罵 </p> 
-                <p>無故殺龜打蛇…如是等罪 </p> 
+                <p>無故殺龜打蛇  如是等罪 </p> 
                 <p>司命隨其輕重  奪其紀算 </p> 
                 <p>算盡則死  死有餘責  乃殃及子孫</p>
                 <br>
