--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -55,48 +55,48 @@
 
                 <h1>關聖帝君降筆真經</h1>
                 <br>
-                <p>吾是漢關聖帝。&nbsp&nbsp敕諭大眾聽聞。</p>
-                <p>世上不齊等事。&nbsp&nbsp全憑一點真心。</p>
-                <p>正直光明不屈。&nbsp&nbsp死生順逆當分。</p>
-                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(先主、桓侯)</p>
-                <p>吾嘗下遊漢季。&nbsp&nbsp結盟皇叔三人。</p>
-                <p>桃園名重千古。&nbsp&nbsp單刀秉燭於今。</p>
-                <p>寄曹明來明去。&nbsp&nbsp吞吳為漢超昇。</p>
-                <p>&nbsp&nbsp&nbsp&nbsp(嘉聖)</p>
-                <p>上帝憐我忠耿。&nbsp&nbsp獨敕宣化幽明。</p>
-                <p>令吾日遊天下。&nbsp&nbsp鑒別忠佞紛紛。</p>
-                <p>一切貪殘奸巧。&nbsp&nbsp還償果報斤斤。</p>
-                <p>最戒讀書文士。&nbsp&nbsp並及官宦軍民。</p>
-                <p>第一休欺父母。&nbsp&nbsp切莫圈套鄉鄰。</p>
-                <p>貧富先交朋友。&nbsp&nbsp朋友乃是五倫。</p>
-                <p>信心內外平等。&nbsp&nbsp何妨蹇難災迍。</p>
-                <p>曹操無底深險。&nbsp&nbsp現今受罪陰冥。</p>
+                <p>吾是漢關聖帝。 敕諭大眾聽聞。</p>
+                <p>世上不齊等事。 全憑一點真心。</p>
+                <p>正直光明不屈。 死生順逆當分。</p>
+                <p>           (先主、桓侯)</p>
+                <p>吾嘗下遊漢季。 結盟皇叔三人。</p>
+                <p>桃園名重千古。 單刀秉燭於今。</p>
+                <p>寄曹明來明去。 吞吳為漢超昇。</p>
+                <p>  (嘉聖)</p>
+                <p>上帝憐我忠耿。 獨敕宣化幽明。</p>
+                <p>令吾日遊天下。 鑒別忠佞紛紛。</p>
+                <p>一切貪殘奸巧。 還償果報斤斤。</p>
+                <p>最戒讀書文士。 並及官宦軍民。</p>
+                <p>第一休欺父母。 切莫圈套鄉鄰。</p>
+                <p>貧富先交朋友。 朋友乃是五倫。</p>
+                <p>信心內外平等。 何妨蹇難災迍。</p>
+                <p>曹操無底深險。 現今受罪陰冥。</p>
                 <p>(武侯)</p>
-                <p>孔明只緣忠義。&nbsp&nbsp幽冥群奉為神。</p>
-                <p>直心直受真福。&nbsp&nbsp巧計巧來禍因。</p>
-                <p>有過昭如日月。&nbsp&nbsp無私天地同群。</p>
-                <p>果然兒女不誑。&nbsp&nbsp到處鬼怕神欽。</p>
-                <p>設計偷覷女色。&nbsp&nbsp自己帷薄宣淫。</p>
-                <p>弄手誆騙財物。&nbsp&nbsp輩輩嫖賭淪侵。</p>
-                <p>比比爭能爭勝。&nbsp&nbsp往往越賤越貧。</p>
-                <p>快快收心猛省。&nbsp&nbsp休休愈墮愈深。</p>
-                <p>三生輪迴惡趣。&nbsp&nbsp千載唾罵難禁。</p>
-                <p>筆尖添減情罪。&nbsp&nbsp舌劍反誅滿門。</p>
-                <p>尤恨毒心狼婦。&nbsp&nbsp花言啜哄鄉親。</p>
-                <p>唆夫罵公罵婆。&nbsp&nbsp令吾一見生瞋。</p>
-                <p>泥像揮刀剖腹。&nbsp&nbsp分斬母子平均。</p>
-                <p>可喜平人孝悌。&nbsp&nbsp朝夕買辦糧薪。</p>
-                <p>霎時風行泥馬。&nbsp&nbsp駝回萬里窮軍。</p>
-                <p>欲求長生育子。&nbsp&nbsp急宜戒殺放生。</p>
-                <p>不食牛犬等肉。&nbsp&nbsp可免牢獄囚刑。</p>
-                <p>男女遵奉吾語。&nbsp&nbsp遇難吾自降臨。</p>
-                <p>戰場驅逐鬼魅。&nbsp&nbsp刀光雷雨血淋。</p>
-                <p>護國百折不改。&nbsp&nbsp助爾加爵策勳。</p>
-                <p>富貴永昌奕世。&nbsp&nbsp眉壽永無災侵。</p>
-                <p>如有毀法妄想。&nbsp&nbsp斗秤欺哄愚氓。</p>
-                <p>不許生身人世。&nbsp&nbsp阿鼻地獄呻吟。</p>
-                <p>那時悔過已晚。&nbsp&nbsp急早配服法文。</p>
-                <p>回頭諸惡莫作。&nbsp&nbsp勉力眾善奉行。</p>
+                <p>孔明只緣忠義。 幽冥群奉為神。</p>
+                <p>直心直受真福。 巧計巧來禍因。</p>
+                <p>有過昭如日月。 無私天地同群。</p>
+                <p>果然兒女不誑。 到處鬼怕神欽。</p>
+                <p>設計偷覷女色。 自己帷薄宣淫。</p>
+                <p>弄手誆騙財物。 輩輩嫖賭淪侵。</p>
+                <p>比比爭能爭勝。 往往越賤越貧。</p>
+                <p>快快收心猛省。 休休愈墮愈深。</p>
+                <p>三生輪迴惡趣。 千載唾罵難禁。</p>
+                <p>筆尖添減情罪。 舌劍反誅滿門。</p>
+                <p>尤恨毒心狼婦。 花言啜哄鄉親。</p>
+                <p>唆夫罵公罵婆。 令吾一見生瞋。</p>
+                <p>泥像揮刀剖腹。 分斬母子平均。</p>
+                <p>可喜平人孝悌。 朝夕買辦糧薪。</p>
+                <p>霎時風行泥馬。 駝回萬里窮軍。</p>
+                <p>欲求長生育子。 急宜戒殺放生。</p>
+                <p>不食牛犬等肉。 可免牢獄囚刑。</p>
+                <p>男女遵奉吾語。 遇難吾自降臨。</p>
+                <p>戰場驅逐鬼魅。 刀光雷雨血淋。</p>
+                <p>護國百折不改。 助爾加爵策勳。</p>
+                <p>富貴永昌奕世。 眉壽永無災侵。</p>
+                <p>如有毀法妄想。 斗秤欺哄愚氓。</p>
+                <p>不許生身人世。 阿鼻地獄呻吟。</p>
+                <p>那時悔過已晚。 急早配服法文。</p>
+                <p>回頭諸惡莫作。 勉力眾善奉行。</p>
                 <br>
 
                 <h1>關聖帝君應驗桃園明聖經</h1>
@@ -114,14 +114,14 @@
                 <p>諸神皆歡喜。宅舍並光明。凶事化為吉。福祿壽重增。</p>
 
                 <p>太上道君三界靈。眾聖五嶽雷電神。</p>
-                <p>五湖並四海。&nbsp&nbsp&nbsp&nbsp&nbsp日月斗星辰。</p>
+                <p>五湖並四海。   日月斗星辰。</p>
                 <p>天下城隍聽號令。萬方土地各遵行。</p>
-                <p>值年值月將。&nbsp&nbsp&nbsp&nbsp&nbsp值日值時神。</p>
-                <p>夜差黑煞帥。&nbsp&nbsp&nbsp&nbsp&nbsp日令皎潔兵。</p>
-                <p>往來細鑒察。&nbsp&nbsp&nbsp&nbsp&nbsp不得漏亳分。</p>
+                <p>值年值月將。   值日值時神。</p>
+                <p>夜差黑煞帥。   日令皎潔兵。</p>
+                <p>往來細鑒察。   不得漏亳分。</p>
                 <p>會同家宅神(祖)。著令司命君。</p>
                 <p>如有虔誦男和女。速速報知聞。
-                <p>或賜福與壽。&nbsp&nbsp&nbsp&nbsp&nbsp或蔭兒與孫。</p>
+                <p>或賜福與壽。   或蔭兒與孫。</p>
                 <p>萬聖朝真均奏議。普天之下盡頒行。</p>
 
                 <p>吾素覽春秋。幼觀孔孟。惟以孝悌為先。修身治國為本。</p>
@@ -177,31 +177,31 @@
                 <p>在宋易姓岳飛（武穆）將。在唐改諱曰張巡（公）。輪迴三轉皆忠烈。</p>
                 <p>上帝封為護國神。小可兵戈不差汝（聖）。大難危邦再下塵。</p>
 
-                <p>天下城隍皆將相。&nbsp&nbsp正直為神古至今。</p>
-                <p>為人忠孝感天地。&nbsp&nbsp豈在持齋佛顯靈。</p>
-                <p>飲食衣服休華美。&nbsp&nbsp隨著隨餐莫厭爭。</p>
-                <p>禽獸一切皆性命。&nbsp&nbsp無故自食宰生靈。</p>
-                <p>一切化生皆活命。&nbsp&nbsp何故張弓捕網尋。</p>
-                <p>草木花果休折採。&nbsp&nbsp嚴冬零落發陽春。</p>
-                <p>萬物悉含天地化。&nbsp&nbsp依時生長與人靈。</p>
-                <p>汝能遵守惜萬物。&nbsp&nbsp福有攸歸禍不侵。</p>
-                <p>勿謂善小而不做。&nbsp&nbsp勿謂惡小而可行。</p>
-                <p>天網恢恢分曲直。&nbsp&nbsp神靈赫赫定虧盈。</p>
-                <p>孝悌忠信人之本。&nbsp&nbsp禮義廉恥人之根。</p>
-                <p>爾能聽吾行善事。&nbsp&nbsp定有祥雲足下騰。</p>
-                <p>吾受三天門掌握。&nbsp&nbsp萬神啟奏吾先聞。</p>
-                <p>善者記錄加官爵。&nbsp&nbsp惡者遭殃絕子孫。</p>
-                <p>報應遲速時未到。&nbsp&nbsp昭彰早晚必終臨。</p>
-                <p>休道天高無耳目。&nbsp&nbsp虧心暗室有遊神。</p>
-                <p>敬神如在須誠敬。&nbsp&nbsp不可狂言褻聖明。</p>
-                <p>萬國九州皆敬服。&nbsp&nbsp道吾忠義獨稱尊。</p>
-                <p>塑形畫像乾坤內。&nbsp&nbsp如吾英雄有幾人。</p>
+                <p>天下城隍皆將相。 正直為神古至今。</p>
+                <p>為人忠孝感天地。 豈在持齋佛顯靈。</p>
+                <p>飲食衣服休華美。 隨著隨餐莫厭爭。</p>
+                <p>禽獸一切皆性命。 無故自食宰生靈。</p>
+                <p>一切化生皆活命。 何故張弓捕網尋。</p>
+                <p>草木花果休折採。 嚴冬零落發陽春。</p>
+                <p>萬物悉含天地化。 依時生長與人靈。</p>
+                <p>汝能遵守惜萬物。 福有攸歸禍不侵。</p>
+                <p>勿謂善小而不做。 勿謂惡小而可行。</p>
+                <p>天網恢恢分曲直。 神靈赫赫定虧盈。</p>
+                <p>孝悌忠信人之本。 禮義廉恥人之根。</p>
+                <p>爾能聽吾行善事。 定有祥雲足下騰。</p>
+                <p>吾受三天門掌握。 萬神啟奏吾先聞。</p>
+                <p>善者記錄加官爵。 惡者遭殃絕子孫。</p>
+                <p>報應遲速時未到。 昭彰早晚必終臨。</p>
+                <p>休道天高無耳目。 虧心暗室有遊神。</p>
+                <p>敬神如在須誠敬。 不可狂言褻聖明。</p>
+                <p>萬國九州皆敬服。 道吾忠義獨稱尊。</p>
+                <p>塑形畫像乾坤內。 如吾英雄有幾人。</p>
                 <p>又奉</p>
-                <p>上帝加御敕。&nbsp&nbsp掌握凡間善惡人。</p>
-                <p>精忠沖日月。&nbsp&nbsp義氣貫乾坤。</p>
-                <p>面赤心尤赤。&nbsp&nbsp鬚長義更長。</p>
-                <p>英雄氣蓋世。&nbsp&nbsp燭殘刀破壁。</p>
-                <p>爵祿辭不受。&nbsp&nbsp封庫印懸樑。</p>
+                <p>上帝加御敕。 掌握凡間善惡人。</p>
+                <p>精忠沖日月。 義氣貫乾坤。</p>
+                <p>面赤心尤赤。 鬚長義更長。</p>
+                <p>英雄氣蓋世。 燭殘刀破壁。</p>
+                <p>爵祿辭不受。 封庫印懸樑。</p>
                 <p>偃月刀。磨仍快。嘆兄弟不再。</p>
                 <p>臥蠶眉。鎖未開。恨江山幾改。</p>
                 <p>亙古功名難比並。三天門下封元帥。稽首頓首。</p>
@@ -267,18 +267,18 @@
                 <p>地獄即城隍。三寶星日月。</p>
                 <p>救濟急難人。就是解冤結。</p>
                 <p>此四節。忠孝廉節。詳明甚切。後列二十四劫。</p>
-                <p>擎天頂地猛勇星。&nbsp&nbsp捧日舉月普照星。</p>
-                <p>列宿張星明朗神。&nbsp&nbsp騰雲駕霧飛度神。</p>
-                <p>驅雷掣電威烈星。&nbsp&nbsp呼風喚雨擾禳星。</p>
-                <p>降霜落雪變通神。&nbsp&nbsp賞善罰惡正直神。</p>
-                <p>輔德討罪忠義星。&nbsp&nbsp覺頑化迷感應星。</p>
-                <p>延生逐疫慈祥神。&nbsp&nbsp飛沙走石截路神。</p>
-                <p>翻江遶海五湖星。&nbsp&nbsp崩山頹嶺鐵甲神。</p>
-                <p>凍水開冰結化星。&nbsp&nbsp抽芽綻葉發育星。</p>
-                <p>開花結果嬌媚星。&nbsp&nbsp長禾秀榖益穗星。</p>
-                <p>走獸飛禽捕捉星。&nbsp&nbsp魚蝦蟹鱉踴躍星。</p>
-                <p>飛跳諸蟲纏擾星。&nbsp&nbsp作文制字文昌星。</p>
-                <p>興兵布陣武曲星。&nbsp&nbsp造作工藝巧作神。</p>
+                <p>擎天頂地猛勇星。 捧日舉月普照星。</p>
+                <p>列宿張星明朗神。 騰雲駕霧飛度神。</p>
+                <p>驅雷掣電威烈星。 呼風喚雨擾禳星。</p>
+                <p>降霜落雪變通神。 賞善罰惡正直神。</p>
+                <p>輔德討罪忠義星。 覺頑化迷感應星。</p>
+                <p>延生逐疫慈祥神。 飛沙走石截路神。</p>
+                <p>翻江遶海五湖星。 崩山頹嶺鐵甲神。</p>
+                <p>凍水開冰結化星。 抽芽綻葉發育星。</p>
+                <p>開花結果嬌媚星。 長禾秀榖益穗星。</p>
+                <p>走獸飛禽捕捉星。 魚蝦蟹鱉踴躍星。</p>
+                <p>飛跳諸蟲纏擾星。 作文制字文昌星。</p>
+                <p>興兵布陣武曲星。 造作工藝巧作神。</p>
                 <p>眾星聽令。各回本部。變化發生。稽首神明。</p>
                 <p>無極聖眾。不可思議功德。</p>
                 <br>
