--- a/chance/bookSanGuan.html
+++ b/chance/bookSanGuan.html
@@ -39,25 +39,25 @@
 	  	<div class="page-header">
 	        <h1>三官感應妙經</h1>
 	        <div class="lead">
-                <!-- <h1>開經讚</h1>
+                <h1>開經讚</h1>
                 <br>
-                <p>天地水府&nbsp&nbsp三界高真&nbsp&nbsp無邊法顯大慈仁</p>
-                <p>濟度應良辰&nbsp&nbsp福被萬民&nbsp&nbsp拔罪出迷津&nbsp&nbsp皈命</p>
-                <p>三元應感大天尊</p>
+                <p>天地水府  三界高真  無邊法顯大慈仁</p>
+                <p>濟度應良辰  福被萬民  拔罪出迷津</p>
+                <p>皈命  三元應感大天尊</p>
                 <br>
                 <h1>開經偈</h1>
                 <br>
-                <p>寂寂至無宗&nbsp&nbsp虛峙劫仞阿&nbsp&nbsp豁落洞玄文</p>
-                <p>誰測此幽遐&nbsp&nbsp一入大乘路&nbsp&nbsp孰計年劫多</p>
-                <p>不生亦不滅&nbsp&nbsp欲生因蓮花&nbsp&nbsp超淩三界途</p>
-                <p>慈心解世羅&nbsp&nbsp真人無上德&nbsp&nbsp世世為仙家</p>
+                <p>寂寂至無宗  虛峙劫仞阿  豁落洞玄文</p>
+                <p>誰測此幽遐  一入大乘路  孰計年劫多</p>
+                <p>不生亦不滅  欲生因蓮花  超淩三界途</p>
+                <p>慈心解世羅  真人無上德  世世為仙家</p>
                 <br>
-                <h1>三官頌</h1>
+                <h1>三官頌 (自此以下皆當跪誦)</h1>
                 <br>
-                <p>稽首皈命天地水&nbsp&nbsp三官大帝慈悲主</p>
-                <p>神功妙德不思議&nbsp&nbsp謹運一心皈命禮</p>
+                <p>稽首皈命天地水  三官大帝慈悲主</p>
+                <p>神功妙德不思議  謹運一心皈命禮</p>
                 <br>
-                <h1>上元天官大帝寶誥  志心皈命禮</h1>
+                <h1>天官寶誥  志心皈命禮</h1>
                 <br>
                 <p>玄都元陽。紫微宮中。部三十六曹。偕九千萬眾。</p>
                 <p>考校大千世界之內。錄籍十方國土之中。福被萬靈。</p>
@@ -66,7 +66,7 @@
                 <p>群生是賴。蠢動咸康。大悲大願。大聖大慈。</p>
                 <p>上元九炁.賜福天官。曜靈元陽大帝.紫微帝君。</p>
                 <br>
-                <h1>中元地官大帝寶誥  志心皈命禮</h1>
+                <h1>地官寶誥  志心皈命禮</h1>
                 <br>
                 <p>青靈洞陽。北都宮中。部四十二曹。偕九千萬眾。</p>
                 <p>主管三界十方九地。掌握五嶽八極四維。吐納陰陽。</p>
@@ -75,7 +75,7 @@
                 <p>存歿沾恩。大悲大願。大聖大慈。</p>
                 <p>中元七炁.赦罪地官。洞靈清虛大帝.青靈帝君。</p>
                 <br>
-                <h1>下元水官大帝寶誥  志心皈命禮</h1>
+                <h1>水官寶誥  志心皈命禮</h1>
                 <br>
                 <p>暘谷洞元。青華宮中。部四十二曹。偕九千萬眾。</p>
                 <p>掌管江河水域萬靈之事。水災大會。劫數之期。</p>
@@ -85,7 +85,7 @@
                 <p>大悲大願。大聖大慈。</p>
                 <p>下元五炁.解厄水官。金靈洞陰大帝.暘谷帝君。</p>
                 <br>
-                <h1>火官大帝寶誥  志心皈命禮</h1>
+                <h1>火官寶誥  志心皈命禮</h1>
                 <br>
                 <p>乾元四品。考校火官。運扶乾健。德合離明。</p>
                 <p>居太陽丹天之中。統左府註生之籍。盛德在火。</p>
@@ -94,7 +94,7 @@
                 <p>煥赫文昌之運。輝輝朗耀。炳炳照臨。大悲大願。大聖大慈。</p>
                 <p>赤皇上品.三炁火官。炎帝真君。洞陽大帝。南丹紀壽天尊。</p>
                 <br>
-                <h1>玄天上帝寶誥  志心皈命禮</h1>
+                <h1>玄帝寶誥  志心皈命禮</h1>
                 <br>
                 <p>混元六天。傳法教主。修真悟道。濟度羣迷。</p>
                 <p>普惠眾生。消除災障。八十二化。三教祖師。</p>
@@ -106,7 +106,173 @@
                 <h1>太上三元賜福赦罪解厄消災延生保命妙經</h1>
                 <br>
                 <p>爾時</p>
-                <p>救苦大仙。</p> -->
+                <p>救苦大仙。在大羅天上。九炁紫微天宮。上白。道君曰。</p>
+                <p>集會三元。天地水官。三界四府。眾聖曹官。考較司。</p>
+                <p>同諸仙眾。講說經法。救拔眾生放大光明。</p>
+                <p>照見天下萬國九州之地。江河湖海之內。閻浮世界之中。</p>
+                <p>受苦眾生。造惡非善。廣結冤讐。多行不足。財交弗明。</p>
+                <p>不敬天地。日月三光。呵風罵雨。欺神滅像。瞞天昧地。</p>
+                <p>褻瀆聖賢。不敬父母叔伯六親。姦盜邪淫。不忠不孝。</p>
+                <p>非禮非義。斷絕往來恩路。不敬五穀。穢污遭賤。</p>
+                <p>不行正道。大斗小秤。明瞞暗騙橫言曲語。白口咒詛。</p>
+                <p>怨天恨地。不恤己身。不修片善。天不容。地不載。</p>
+                <p>致生惡毒。多起瘟㾮。多招訟非。輕重難逃。故作事因。</p>
+                <p>得此苦報。惡難臨身。無處解釋。於是救苦大仙。端簡上告。</p>
+                <p>上元天官曰。善哉善哉。此等眾生。遭刑苦難。若有善男信女。</p>
+                <p>皈依三元齋戒。三年圓滿。命道轉誦此經。三五十遍。</p>
+                <p>千五百遍。踴躍懺悔。悔過愆尤。</p>
+
+                <p>道君曰。即有</p>
+                <p>天官賜福。</p>
+                <p>地官赦罪。</p>
+                <p>水官解厄。</p>
+                <p>於是告下。三元天尊。即駕五色祥雲。行九炁清風。至都會府。雲臺山上。</p>
+                <p>放大毫光。廣大惠力。無邊法顯。濟民救苦。福應萬靈。諸天升降。</p>
+                <p>除無妄之災。解有讐之愆。賜千祥之福。脫九厄之難。離三途之苦。</p>
+                <p>痴蠢康泰削去原罪。拔除冤根。永消愆尤。父母存亡。沾恩離苦。</p>
+                <p>四生六道。餓鬼窮魂。孤魂野鬼。九玄七祖未離地獄之中。</p>
+                <p>存亡眾生。杻械枷鎖。囹圄閉塞。於是地官。至七月十五日。</p>
+                <p>即與獄囚。地獄受苦眾生。除罪簿。滅惡根。</p>
+                <p>削死名。上生籍。已去提。未去提。已提至。</p>
+                <p>未提至。已結證。未結證。已發覺。未發覺。</p>
+                <p>逢赦除之。</p>
+
+                <p>地官曰。五刑十惡等罪。永不赦除。</p>
+                <p>天尊言。𩖁𪚇齟齬。蛇牙虎口。心如錐刀。惡毒之人。鬼眼鬼心。</p>
+                <p>多計巧言。嗊瞞痴愚。蠢子何知。割他肉不念他貧。只念己富。</p>
+                <p>肥家潤身。使心用心。返累己身。心根結成。罪根難滅。貪財利己。</p>
+                <p>天雷霹靂。瘟氣流傳。纏害身體冤愆相併。併及子孫。於是  救苦大仙。</p>
+                <p>再告天官。</p>
+
+                <p>天官曰。轉誦此經。至滿千遍。天作踴躍悔過愆尤。斷惡修善。</p>
+                <p>即有地官赦罪。所有惡孽愆尤。俱一赦除。心心忐忑。盡一皈正。</p>
+                <p>恍恍惚惚。耳目心定。神魂安靜。精神復舊。罪滅福生。無量功德。</p>
+                <p>其福無邊。</p>
+
+                <p>道君曰。世間眾生。招瘟惹災。毒氣流行。眾生染著。</p>
+                <p>偕是造惡非善。冤讐相併。致生惡疾淹延未愈。</p>
+                <p>若誦此經。病即痊癒。若誦經者。至端陽中元之日。</p>
+                <p>即有三元追回行瘟等眾。考較輕重等罪。俱一赦除。</p>
+
+                <p>水官曰。世間夫婦。命犯孤辰寡宿。刑害絕嗣。</p>
+                <p>皆是前生不施。今生受之。若有善男信女。晨夕好靜。</p>
+                <p>沐浴燒香。燃燈誦經。修齋布施。悔過消刑。便生端正。</p>
+                <p>有相之男。聰明富貴之子。聲鎮五湖四海。宿世今生。</p>
+                <p>故作誤為。謀財負命。今世為兒。取命化財。</p>
+                <p>女人妊娠三朝五日。不行分娩。或在身兒亡。</p>
+                <p>生下兒亡。三六九歲兒亡。十一五歲兒亡。</p>
+                <p>一日一夜。萬死萬生。俱是冤愆相臨。化目化財。</p>
+                <p>騙協財物。化為畜生。若有善男信女。發心施財。</p>
+                <p>齋戒沐浴。轉誦此經。悔過愆尤。即使愆尤永釋。</p>
+                <p>人鬼分離。産生無難。母子雙全。關煞無刑。</p>
+                <p>生長成人。利益雙親。經力宏深 。祈福福至。禳禍禍消。</p>
+
+                <p>天尊言。讐人冰泮。冤家債主。自消自滅。孤魂等眾。</p>
+                <p>九玄七祖。四生六道。輪迴生死。出離地獄。</p>
+                <p>即往東極天界救苦門庭。救苦地上好修行。只有天堂無地獄。</p>
+                <p>閻王一見。不敢高聲。童子夜叉。擎拳拱手。</p>
+                <p>牛頭馬面。總盡皈依。一十八重地獄。獄獄消遙。</p>
+                <p>三十三天天宮。宮宮自在。超生天堂之境。即無地獄之聲。</p>
+                <p>出離地獄。永離苦難。徑往人天。超生淨土。快樂無量。</p>
+                <p>一去一來。無掛無礙。</p>
+
+                <p>水官曰。天下眾生。星辰不順。運限遲留。凶曜衝併。</p>
+                <p>多生疾病。或瘟病相侵。或痢疾瘡毒相侵。</p>
+                <p>或腫毒疥癲相侵。氣候喉㾮相侵。咽喉風毒相侵。</p>
+                <p>泄瀉風痰相侵。祖塚瘟氣相侵。住基風水相侵。</p>
+                <p>邪師敗聖相侵。火眼癆瘵相侵。吐血蠱毒相侵。</p>
+                <p>白口咒詛相侵。刀兵火盜相侵。水渰顛狂相侵。</p>
+                <p>吊頸枷鎖相侵。穢門閉瘴相侵。年月日時不利相侵。</p>
+                <p>砍伐壇廟樹木相侵。挖坑動土相侵。開基開沼相侵。</p>
+                <p>添新換舊相侵。修前整後相侵 瘧疾疹疾相侵。</p>
+                <p>瘟災瘟氣相侵。官符口舌相侵。致生惡疾來纏。</p>
+                <p>眾生染著致於喪亡。若誦此經。即使惡疾不纏。</p>
+                <p>吉星相護。凶曜退散。萬禍冰消。千祥雲集。</p>
+                <p>經通天界。福臨人間。</p>
+
+                <p>天尊言。天下眾生。江河湖海。舟航商賈。風波洶湧。</p>
+                <p>驚惶憂懼。若誦此經。皈依天地水官。水府眾聖。</p>
+                <p>即使風恬浪靜。水途安妥。舟航穩載。繩纜堅牢。</p>
+                <p>所謀順遂。諸聖擁護。萬神錫福。</p>
+                <p>於是天尊而說偈曰。</p>
+                <p>九炁青天上。日月星斗真。天地水官帝。雲雷電鼓隨。</p>
+                <p>金童執華旛。玉女捧香花。五色祥雲内。放出白毫光。</p>
+                <p>照一切天下。顯身救眾生。慶雲祥煙護。拔離諸苦難。</p>
+                <p>興雲布洪雨。驅雷掣電行。捲起揚塵土。神氣威猛烈。</p>
+                <p>廣大智慧力。法顯無邊濟。無極無量法。無量度眾生。</p>
+                <p>無極無量光。照出諸魂眾。一切冤家鬼。盡離地獄中。</p>
+                <p>存亡諸眾生。一切離苦難。</p>
+
+                <p>天尊說經已畢。若誦此經隨力見功。酌水獻花。其福自應。</p>
+                <p>家有此經。宅舍光明。災難無侵。佩帶此經。</p>
+                <p>萬神擁護。鬼祟永滅。心念不空。福力自然。</p>
+                <p>神力扶持。隨心應口。此經共計一千六百七十五字。</p>
+                <p>字字真詮。句句消愆。行行滅罪。卷卷賜福。</p>
+                <p>一切諸天上帝。三界十方眾聖。聞說此經。</p>
+                <p>皆大歡喜。信受奉行。作禮而退。</p>
+
+                <p>太上三元賜福赦罪解厄消災延生保命妙經終</p>
+                <br>
+                <h1>太上元始天尊說三官寶號</h1>
+                <br>
+                <p>爾時</p>
+                <p>元始天尊。在大羅天上。八景宮中。與諸天神王。</p>
+                <p>日月星宿。上聖高尊。無極聖眾。說無上至真玅法。</p>
+                <p>有一真人。名曰赤腳大仙。越班而出。擎拳長跪。上白。</p>
+                <p>天尊曰。下界人民。或有水火刀兵。疾病生產。</p>
+                <p>鬼魅精邪。天羅地網。一切厄難。何由救免。</p>
+
+                <p>天尊言。得道神仙。皆從三官保舉。下方生人。</p>
+                <p>但持三官寶號。能除厄難。悉皆消滅。</p>
+                <p>吾今授汝下世。流傳人間。看誦者。得福無量。</p>
+                <p>消一切厄。即說寶號曰 。</p>
+                <p>北極玄穹。紫微帝庭。泰山岱嶽。水國清冷。</p>
+                <p>綱維三界。統御萬靈。三元校籍。善惡攸分。</p>
+                <p>齋戒禮誦。無願不成。消災釋罪。降福延生。</p>
+                <p>至真妙道。功德無邊。大悲大願。大聖大慈。</p>
+                <p>上元一品。賜福天官。紫微大帝。</p>
+                <p>中元二品。赦罪地官。清虛大帝。</p>
+                <p>下元三品。解厄水官。洞陰大帝。</p>
+                <p>乾元四品。考較火官。洞陽大帝。</p>
+                <p>三元主宰。三百六十。應感天尊。</p>
+                <p>如青真人。一百二十。考較曹官。</p>
+                <p>爾時赤腳大仙。與諸天神王。真仙大眾。</p>
+                <p>聞說寶號。皆大歡喜。作禮稽首而退。信受奉行。</p>
+
+                <p>太上元始天尊說三官寶號終</p>
+                <br>
+                <h1>玉皇寶誥 志心皈命禮</h1>
+                <br>
+                <p>太上彌羅無上天。妙有玄真境。渺渺紫金闕。</p>
+                <p>太微玉清宮。無極無上聖。廓落豁光明。</p>
+                <p>寂寂浩無宗。玄範總十方。湛寂真常道。</p>
+                <p>恢漠大神通。</p>
+                <p>穹蒼真老。妙圓清靜。智慧辯才。至道至尊。</p>
+                <p>三界師。混元祖。無為聖主。四生慈父。</p>
+                <p>高天上聖。大慈仁者。十號圓滿。萬德周身。</p>
+                <p>無量度人。拔生死苦。眾聖之王。諸神之師。</p>
+                <p>太上開天。執符御歷。含真體道。金闕雲宮。</p>
+                <p>九穹歷御。萬道無為。通明大殿。</p>
+                <p>昊天金闕。玉皇大天尊。玄穹高上帝。</p>
+                <br>
+                <h1>完經讚</h1>
+                <br>
+                <p>三官大帝。應感十方。神功妙德廣宣揚。</p>
+                <p>浩劫仗垂光 普濟存亡。度厄降禎祥</p>
+                <p>皈命 三元應感大天尊</p>
+                <br>
+                <h1>三官寶號 志心皈命禮</h1>
+                <br>
+                <p>惟三聖人。乃一太極。晉受浩劫家之命。鼎膺無量品之褒。</p>
+                <p>紫微清虛洞陰。總領功過。賜福赦罪解厄。普濟存亡。</p>
+                <p>道冠諸天。恩覃三界。大悲大願。大聖大慈。</p>
+                <p>三元三品。三官大帝。三宮九府。應感天尊。</p>
+                <br>
+                <h1>朝天讚</h1>
+                <br>
+                <p>三官經跪誦已週隆。回向四恩併三宥。合宮眾弟子(今有弟子某某)增福壽(辦理事項)。</p>
+                <p>願將法水洒愆尤。考校宮聖眾(暨列位聖佛仙神聖號)。唯願垂納受。</p>
+                <p>皈命 三官應感大天尊</p>
             </div>
 	    </div>
 	</div>
