--- a/chance/bookShengYu.html
+++ b/chance/bookShengYu.html
@@ -58,7 +58,7 @@
                 <p>做出許多傀儡。造成無數巧功。</p>
                 <p>只圖肥潤自己。那知惱怒天公。</p>
                 <p>降下了諸般劫數。收伏那惡人種種。</p>
-                <p>水火刀兵未了。疾病瘟皇(疒+皇)又逢。</p>
+                <p>水火刀兵未了。疾病瘟㾮又逢。</p>
                 <p>鬼哭神嚎。山搖地動。</p>
                 <p>轉瞬間三九堪痛。曲江上火龍夾攻。</p>
                 <p>那時節。</p>
