--- a/chance/bookZaoWang.html
+++ b/chance/bookZaoWang.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Benson">
     <!-- <link rel="icon" href="../favicon.ico"> -->
 
-	<title>灶王真經</title>
+	<title>竈王真經</title>
 	<script src="js/chancelist.js"></script>
 	 <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -37,11 +37,11 @@
 
 	<div class="container">
 	  	<div class="page-header">
-	        <h1>灶王真經</h1>
+	        <h1>竈王真經</h1>
 	        <div class="lead">
                 <h1>九天真元顯應誨世靈寶金經</h1>
                 <br>
-                <p>九重天上灶王尊 靈霄輔相鎮乾坤</p>
+                <p>九重天上竈王尊 靈霄輔相鎮乾坤</p>
                 <p>三界全權都在握 人間禍福掌操中</p>
                 <p>斯世不知多褻慢 難逃禍患萃盈門</p>
                 <p>吾今大發慈悲念 降造金經一卷文</p>
@@ -60,13 +60,13 @@
                 <p>男婦果能遵教訓 修功積德姓名芬</p>
                 <p>(金經誦畢焚香九叩禮續誦)     </p>
                 <br><br>
-                <h1>灶王神經</h1>
+                <h1>竈王神經</h1>
                 <br>
-                <p>灶王菩薩灶神經 灶神原來在天庭</p>
+                <p>竈王菩薩竈神經 竈神原來在天庭</p>
                 <p>只因人世心改變 玉帝差吾下凡塵</p>
                 <p>親身下降察善惡 看民回心不回心</p>
-                <p>灶神本是一家主 莫把菩薩看的輕</p>
-                <p>灶王府君家家有 凡眼怎見神靈身</p>
+                <p>竈神本是一家主 莫把菩薩看的輕</p>
+                <p>竈王府君家家有 凡眼怎見神靈身</p>
                 <p>時時家家親察照 善善惡惡看得清</p>
                 <p>有等不賢潑婦女 全不把吾放在心</p>
                 <p>灶上堆得不成樣 鞋襪放在上面存</p>
@@ -80,16 +80,16 @@
                 <p>殺雞灶上來砍殺 那有這樣大膽人</p>
                 <p>年頭月尾不打掃 灰塵霧住吾得身</p>
                 <p>這樣把神來輕慢 可恨凡民大欺心</p>
-                <p>個個神壽有人敬 那個說起吾灶神</p>
+                <p>個個神壽有人敬 那個說起吾竈神</p>
                 <p>八月初三神壽誕 全不提動半毫分</p>
-                <p>是神壽誕鬧熱熱 唯有灶神冷清清</p>
-                <p>民若把吾神敬   八月初三記在心</p>
+                <p>是神壽誕鬧熱熱 唯有竈神冷清清</p>
+                <p>凡民若把吾神敬 八月初三記在心</p>
                 <p>灶前便把香燈點 茶果齋供盡片心</p>
                 <p>非怪吾神要爾敬 因你凡民大欺心</p>
-                <p>奉勸世人休忘記 無吾灶神也不成</p>
+                <p>奉勸世人休忘記 無吾竈神也不成</p>
                 <p>人有誠心神感應 五瘟使者不入門</p>
                 <p>一切禍患齊掃散 丟下前緣接後因</p>
-                <p>回頭再把灶王表 正直無私不順情</p>
+                <p>回頭再把竈王表 正直無私不順情</p>
                 <p>轉回天宮奏</p>
                 <p>玉帝 善惡不隱半毫分</p>
                 <p>玉帝聞言心大怒 差遣五瘟下凡塵</p>
@@ -100,7 +100,7 @@
                 <p>大善投胎大富貴 中善投生中等人</p>
                 <p>大惡脫生變畜類 小惡投生變賤貧</p>
                 <p>或是癡聾與瘖啞 牛馬豬羊去還人</p>
-                <p>灶王今把凡民勸 依得神言是福人</p>
+                <p>竈王今把凡民勸 依得神言是福人</p>
                 <p>虧心除盡平生福 奸巧短壽把命傾</p>
                 <p>閤家人口保安甯 世人不聽吾神勸</p>
                 <p>怕你後悔枉費心 吾神臘月歸天去</p>
@@ -124,16 +124,16 @@
                 <p>假使自己兒和女 別人屈打憐不憐</p>
                 <p>行事須當存天理 切莫欺死又瞞生</p>
                 <p>逢人將經來勸解 廣積陰德與兒孫</p>
-                <p>灶王勸人費心苦 看民回心不回心</p>
+                <p>竈王勸人費心苦 看民回心不回心</p>
                 <p>偈曰</p>
-                <p>東廚司命君 留下灶王經 見面抄一本 子孫享科名</p>
+                <p>東廚司命君 留下竈王經 見面抄一本 子孫享科名</p>
                 <p>眼下無災厄 禍事不臨門 吾神八月壽 初三記在心</p>
                 <p>若把吾經唸 齋戒忌油葷 初一並十五 各自要誠心</p>
                 <p>信者有好處 不信自墮身 死後見報復 報應見假真</p>
                 <p>勸人抄十卷 解去一世冤 勸人抄百本 九祖得升天</p>
                 <p>吾神不虛說 保你富貴全 不敬吾神者 枉生塵世間</p>
                 <br><br>
-                <h1>灶君降筆文</h1>
+                <h1>竈君降筆文</h1>
                 <br>
                 <p>教事已停 吾來降臨 一家之主 萬戶福神</p>
                 <p>職掌冊簿 絲毫奏呈 時逢末劫 苦救眾生</p>
