--- a/chance/medicine_info.html
+++ b/chance/medicine_info.html
@@ -74,7 +74,7 @@
                 <p>祠陳: 鉤陳、鉤藤</p>
                 <h1>一字真</h1>
                 <p>芽黃: 大黃</p>
-                <p>寸文: 麥文冬</p>
+                <p>寸文: 麥門冬</p>
                 <p>人交: 秦艽</p>
                 <p>法下: 用明矾加工炮制的半夏</p>
                 <p>生軍: 生大黄</p>
