--- a/chance/bookHuaTuo.html
+++ b/chance/bookHuaTuo.html
@@ -42,98 +42,98 @@
                 <h1>華陀醒世七寶金經</h1>
                 <h1>志心皈命禮</h1>
                 <br>
-                <p>天地生人有七寶&nbsp&nbsp全於一身調養好</p>
-                <p>血氣精神體髮膚&nbsp&nbsp吩咐生民重寶珠</p>
-                <p>人生珠寶在如何&nbsp&nbsp氣血精神慎勿勞</p>
-                <p>身體髮膚受父母&nbsp&nbsp不敢毀傷孝始多</p>
-                <p>父母惟其疾之憂&nbsp&nbsp能體親心孝者流</p>
-                <p>固守精神調氣血&nbsp&nbsp一生無病是真修</p>
-                <p>天道難容奸淫類&nbsp&nbsp淫孽行多面憔悴</p>
-                <p>不從正道傳元良&nbsp&nbsp惡疾身殀盈天罪</p>
-                <p>吾有良方濟萬民&nbsp&nbsp不濟奸淫罪惡人</p>
-                <p>罪惡之人包天膽&nbsp&nbsp奸拐滅倫偽亂真</p>
-                <p>吾有刳腸洗胃方&nbsp&nbsp總醫忠孝善賢良</p>
-                <p>不忠不孝難求藥&nbsp&nbsp藥也無靈是淡湯</p>
-                <p>吾有穿胸換骨丹&nbsp&nbsp總醫忠孝善良班</p>
-                <p>不良不善難求藥&nbsp&nbsp藥到無靈悔萬難</p>
-                <p>當年曹賊患頭風&nbsp&nbsp不聽醫言死病中</p>
-                <p>關帝刮骸因中毒&nbsp&nbsp療醫蜀傑大英雄</p>
-                <p>奸者何其奸&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp回生無藥入秦關</p>
-                <p>忠者何其忠&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp續命多方立漢功</p>
-                <p>人能學道行良善&nbsp&nbsp先從氣骨早修練</p>
-                <p>修到己身七寶全&nbsp&nbsp無災無害世流傳</p>
-                <p>體健康人享大年&nbsp&nbsp愛惜精神寡慾先</p>
-                <p>慾寡神清精氣足&nbsp&nbsp圖呈福壽永綿延</p>
-                <p>百歲修行不是奇&nbsp&nbsp淨心淨口念菩提</p>
-                <p>明鏡臺前時拂拭&nbsp&nbsp不受塵埃半點披</p>
-                <p>時逢劫數起刀兵&nbsp&nbsp梟惡奸刁罪貫盈</p>
-                <p>愧無片善人間立&nbsp&nbsp神壇求赦總無情</p>
-                <p>莫謂無情卻有情&nbsp&nbsp不忍不教戮誅人</p>
-                <p>知汝愚頑農圃輩&nbsp&nbsp從頭喚醒出迷津</p>
-                <p>人成大善尋何路&nbsp&nbsp家有雙親先養顧</p>
-                <p>不孝父母善念虧&nbsp&nbsp不和兄弟心如獸</p>
-                <p>行成大惡在何方&nbsp&nbsp見色思淫罪莫當</p>
-                <p>奸淫孀婦人妻女&nbsp&nbsp神天不赦此癡狂</p>
-                <p>人若癡狂惡孽多&nbsp&nbsp殀年折壽罪難逃</p>
-                <p>名登黑籍謄烏筆&nbsp&nbsp禱地呼天禁網羅</p>
-                <p>必清心淨洗邪淫&nbsp&nbsp逐去邪心立善心</p>
-                <p>修橋補路憐孤寡&nbsp&nbsp福有攸歸禍不侵</p>
-                <p>金經一卷非閒說&nbsp&nbsp說出斯民優與劣</p>
-                <p>優者自優善自由&nbsp&nbsp劣者自劣心自拙</p>
-                <p>優劣總由人自為&nbsp&nbsp勤修百善增門楣</p>
-                <p>一舉首登龍虎榜&nbsp&nbsp十年身到鳳凰池</p>
+                <p>天地生人有七寶  全於一身調養好</p>
+                <p>血氣精神體髮膚  吩咐生民重寶珠</p>
+                <p>人生珠寶在如何  氣血精神慎勿勞</p>
+                <p>身體髮膚受父母  不敢毀傷孝始多</p>
+                <p>父母惟其疾之憂  能體親心孝者流</p>
+                <p>固守精神調氣血  一生無病是真修</p>
+                <p>天道難容奸淫類  淫孽行多面憔悴</p>
+                <p>不從正道傳元良  惡疾身殀盈天罪</p>
+                <p>吾有良方濟萬民  不濟奸淫罪惡人</p>
+                <p>罪惡之人包天膽  奸拐滅倫偽亂真</p>
+                <p>吾有刳腸洗胃方  總醫忠孝善賢良</p>
+                <p>不忠不孝難求藥  藥也無靈是淡湯</p>
+                <p>吾有穿胸換骨丹  總醫忠孝善良班</p>
+                <p>不良不善難求藥  藥到無靈悔萬難</p>
+                <p>當年曹賊患頭風  不聽醫言死病中</p>
+                <p>關帝刮骸因中毒  療醫蜀傑大英雄</p>
+                <p>奸者何其奸       回生無藥入秦關</p>
+                <p>忠者何其忠       續命多方立漢功</p>
+                <p>人能學道行良善  先從氣骨早修練</p>
+                <p>修到己身七寶全  無災無害世流傳</p>
+                <p>體健康人享大年  愛惜精神寡慾先</p>
+                <p>慾寡神清精氣足  圖呈福壽永綿延</p>
+                <p>百歲修行不是奇  淨心淨口念菩提</p>
+                <p>明鏡臺前時拂拭  不受塵埃半點披</p>
+                <p>時逢劫數起刀兵  梟惡奸刁罪貫盈</p>
+                <p>愧無片善人間立  神壇求赦總無情</p>
+                <p>莫謂無情卻有情  不忍不教戮誅人</p>
+                <p>知汝愚頑農圃輩  從頭喚醒出迷津</p>
+                <p>人成大善尋何路  家有雙親先養顧</p>
+                <p>不孝父母善念虧  不和兄弟心如獸</p>
+                <p>行成大惡在何方  見色思淫罪莫當</p>
+                <p>奸淫孀婦人妻女  神天不赦此癡狂</p>
+                <p>人若癡狂惡孽多  殀年折壽罪難逃</p>
+                <p>名登黑籍謄烏筆  禱地呼天禁網羅</p>
+                <p>必清心淨洗邪淫  逐去邪心立善心</p>
+                <p>修橋補路憐孤寡  福有攸歸禍不侵</p>
+                <p>金經一卷非閒說  說出斯民優與劣</p>
+                <p>優者自優善自由  劣者自劣心自拙</p>
+                <p>優劣總由人自為  勤修百善增門楣</p>
+                <p>一舉首登龍虎榜  十年身到鳳凰池</p>
                 <p>(醒世七寶金經終)</p>
                 <br><br>
                 <h1>東天華仙翁嚴禁心經</h1>
                 <h1>志心皈命禮</h1>
                 <br>
                 <p>先天曰</p>
-                <p>太上大天尊&nbsp&nbsp世受漢朝天&nbsp&nbsp存台皆由命</p>
-                <p>護法四海邊&nbsp&nbsp神風高朗誦&nbsp&nbsp即刻得臨前</p>
-                <p>誰人之吾戒&nbsp&nbsp一一誦千遍&nbsp&nbsp早晨須用意</p>
-                <p>感避妖魔出外邊&nbsp&nbsp虔心意動全戒法</p>
-                <p>七寶金身進華筵&nbsp&nbsp感動青天扶持報</p>
-                <p>孝義忠君緊相連&nbsp&nbsp得吾心經守戒法</p>
-                <p>削骨療醫在世間&nbsp&nbsp尊恩一命安天下</p>
+                <p>太上大天尊  世受漢朝天  存台皆由命</p>
+                <p>護法四海邊  神風高朗誦  即刻得臨前</p>
+                <p>誰人之吾戒  一一誦千遍  早晨須用意</p>
+                <p>感避妖魔出外邊  虔心意動全戒法</p>
+                <p>七寶金身進華筵  感動青天扶持報</p>
+                <p>孝義忠君緊相連  得吾心經守戒法</p>
+                <p>削骨療醫在世間  尊恩一命安天下</p>
                 <p>萬里祥光振玉連</p>
-                <p>天堂朝暮四&nbsp&nbsp那時見我前&nbsp&nbsp誰人朝暮誦</p>
-                <p>暮誦守志堅&nbsp&nbsp見我容易日&nbsp&nbsp壽滿入先天</p>
-                <p>兒孫皆昌盛&nbsp&nbsp富貴共相連&nbsp&nbsp如人須用日</p>
-                <p>奉誦七寶篇&nbsp&nbsp意樂文華殿&nbsp&nbsp苦幸不惜言</p>
-                <p>神中有顯應&nbsp&nbsp污穢近不前&nbsp&nbsp此經救末劫</p>
-                <p>末劫避災愆&nbsp&nbsp此經救急難&nbsp&nbsp急難出羅關</p>
-                <p>此經救病者&nbsp&nbsp病者得安然&nbsp&nbsp家宅奉此經</p>
-                <p>妖魅不相侵&nbsp&nbsp行人佩此經&nbsp&nbsp誰路保安全</p>
-                <p>書生看此經&nbsp&nbsp進步慶遐齡&nbsp&nbsp婦人誦此經</p>
-                <p>輪回轉男身&nbsp&nbsp榮華須富貴&nbsp&nbsp福祿增佳音</p>
-                <p>若為亡化唸&nbsp&nbsp亡化拔雲庭&nbsp&nbsp開天闢地至</p>
-                <p>未有吾傳經&nbsp&nbsp吾賜東天在&nbsp&nbsp奉請望來臨</p>
-                <p>通傳天下闊&nbsp&nbsp挽勸世間人&nbsp&nbsp渡盡諸惡事</p>
-                <p>嫖賭大罪人&nbsp&nbsp口舌唆弄輩&nbsp&nbsp罪犯一千斤</p>
-                <p>殺人與放火&nbsp&nbsp永不轉人身&nbsp&nbsp暗箭汝不謹</p>
-                <p>永世不成人&nbsp&nbsp陰刑千般苦&nbsp&nbsp苦海不容情</p>
-                <p>孽鏡分毫照&nbsp&nbsp不穩半分深&nbsp&nbsp誰人知勸化</p>
-                <p>速速改前因&nbsp&nbsp回頭向善道&nbsp&nbsp善道七寶經</p>
-                <p>榮華全賜福&nbsp&nbsp死後得神庭&nbsp&nbsp人民勤作業</p>
-                <p>耕行苦作身&nbsp&nbsp公平由天命&nbsp&nbsp鑒察有遊神</p>
-                <p>夜差黑煞帥&nbsp&nbsp日令皎潔兵&nbsp&nbsp達上三天內</p>
-                <p>轉奏玉冊心&nbsp&nbsp惡黨千萬計&nbsp&nbsp何有福隨身</p>
-                <p>善功千萬記&nbsp&nbsp富貴得相侵&nbsp&nbsp善惡全分界</p>
+                <p>天堂朝暮四  那時見我前  誰人朝暮誦</p>
+                <p>暮誦守志堅  見我容易日  壽滿入先天</p>
+                <p>兒孫皆昌盛  富貴共相連  如人須用日</p>
+                <p>奉誦七寶篇  意樂文華殿  苦幸不惜言</p>
+                <p>神中有顯應  污穢近不前  此經救末劫</p>
+                <p>末劫避災愆  此經救急難  急難出羅關</p>
+                <p>此經救病者  病者得安然  家宅奉此經</p>
+                <p>妖魅不相侵  行人佩此經  誰路保安全</p>
+                <p>書生看此經  進步慶遐齡  婦人誦此經</p>
+                <p>輪回轉男身  榮華須富貴  福祿增佳音</p>
+                <p>若為亡化唸  亡化拔雲庭  開天闢地至</p>
+                <p>未有吾傳經  吾賜東天在  奉請望來臨</p>
+                <p>通傳天下闊  挽勸世間人  渡盡諸惡事</p>
+                <p>嫖賭大罪人  口舌唆弄輩  罪犯一千斤</p>
+                <p>殺人與放火  永不轉人身  暗箭汝不謹</p>
+                <p>永世不成人  陰刑千般苦  苦海不容情</p>
+                <p>孽鏡分毫照  不穩半分深  誰人知勸化</p>
+                <p>速速改前因  回頭向善道  善道七寶經</p>
+                <p>榮華全賜福  死後得神庭  人民勤作業</p>
+                <p>耕行苦作身  公平由天命  鑒察有遊神</p>
+                <p>夜差黑煞帥  日令皎潔兵  達上三天內</p>
+                <p>轉奏玉冊心  惡黨千萬計  何有福隨身</p>
+                <p>善功千萬記  富貴得相侵  善惡全分界</p>
                 <p>諸神不隱情</p>
-                <p>今世修為後世德&nbsp&nbsp或登神道可安居</p>
-                <p>或是輪回登省內&nbsp&nbsp一生心樂不憂虛</p>
-                <p>凡民信得吾奉勸&nbsp&nbsp定有清風明月時</p>
-                <p>諸神壽誕千般奉&nbsp&nbsp獨我孤神古來稀</p>
-                <p>凡民欲祝吾壽誕&nbsp&nbsp十二月終廿三題</p>
-                <p>通傳開誦經典界&nbsp&nbsp吾心歡受一夢時</p>
-                <p>此卷真經蒙行化&nbsp&nbsp百煞潛藏事事宜</p>
-                <p>青松樹下無人見&nbsp&nbsp勸得回頭得見時</p>
-                <p>再嘆凡民塵世界&nbsp&nbsp紅塵世界得煩辛</p>
-                <p>流樂嫖花中難舍&nbsp&nbsp禍患災殃得臨身</p>
-                <p>急行大善修因果&nbsp&nbsp天眼昭昭不可欺</p>
-                <p>吾卷真經仙法在&nbsp&nbsp隨時開誦勿違遲</p>
-                <p>正氣浩然須用力&nbsp&nbsp此中嚴禁是心經</p>
-                <p>戒法內中開誦唸&nbsp&nbsp真哉誦唸慶遐齡</p>
+                <p>今世修為後世德  或登神道可安居</p>
+                <p>或是輪回登省內  一生心樂不憂虛</p>
+                <p>凡民信得吾奉勸  定有清風明月時</p>
+                <p>諸神壽誕千般奉  獨我孤神古來稀</p>
+                <p>凡民欲祝吾壽誕  十二月終廿三題</p>
+                <p>通傳開誦經典界  吾心歡受一夢時</p>
+                <p>此卷真經蒙行化  百煞潛藏事事宜</p>
+                <p>青松樹下無人見  勸得回頭得見時</p>
+                <p>再嘆凡民塵世界  紅塵世界得煩辛</p>
+                <p>流樂嫖花中難舍  禍患災殃得臨身</p>
+                <p>急行大善修因果  天眼昭昭不可欺</p>
+                <p>吾卷真經仙法在  隨時開誦勿違遲</p>
+                <p>正氣浩然須用力  此中嚴禁是心經</p>
+                <p>戒法內中開誦唸  真哉誦唸慶遐齡</p>
             </div>
 	    </div>
 	</div>
